Trying Many Model

--- a/pgm-r/Linear_Regression_20171203_1.html
+++ b/pgm-r/Linear_Regression_20171203_1.html
@@ -158,7 +158,7 @@ $(document).ready(function () {
 </ul>
 </div>
 
-<p>Data : 2017-12-03</p>
+<p>Data : 2017-12-10</p>
 <div class="section level1">
 <h1><span class="header-section-number">1</span> 概要</h1>
 <p>コンペの内容<br />
@@ -248,16 +248,8 @@ $(document).ready(function () {
 <div class="section level2">
 <h2><span class="header-section-number">2.2</span> モデル作成用のカラム</h2>
 <pre class="r"><code>## 使用ライブラリ
-library(tidyverse)</code></pre>
-<pre><code>## -- Attaching packages ---------------------------------- tidyverse 1.2.0 --</code></pre>
-<pre><code>## √ ggplot2 2.2.1     √ purrr   0.2.4
-## √ tibble  1.3.4     √ dplyr   0.7.4
-## √ tidyr   0.7.2     √ stringr 1.2.0
-## √ readr   1.1.1     √ forcats 0.2.0</code></pre>
-<pre><code>## -- Conflicts ------------------------------------- tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>library(knitr)
+library(tidyverse)
+library(knitr)
 
 param &lt;- c(&quot;capa&quot;, &quot;pre_rank.home&quot;, &quot;pre_rank.away&quot;, &quot;media&quot;, &quot;section&quot;, &quot;home_team&quot;, &quot;away_team&quot;,&quot;hour&quot;,&quot;week&quot;,&quot;rain&quot;, &quot;pre_win_rate.home&quot;, &quot;pre_win_rate.away&quot;, &quot;heat&quot;)
 explain &lt;- c(&quot;スタジアムの収容人数&quot;, &quot;前節のランキング(home)&quot;,&quot;前節のランキング(away)&quot;, &quot;tv局数&quot;, &quot;節&quot;, &quot;ホームチーム&quot;, &quot;アウェイチーム&quot;, &quot;開始時刻&quot;, &quot;1(土日祝)、0(平日)&quot;, &quot;1(雨)、0(雨以外)&quot;,&quot;ピタゴラス勝率(home)&quot;,&quot;ピタゴラス勝率(away)&quot;,&quot;後半の下位争い&quot;)
